kubernetes/postgres/postgres-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-postgres
  namespace: postgres
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 192.168.50.0/24
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 30432
